# cinderblock-ticketing

./: Cargo.toml  README.md  openapi.json  ticketing.db
frontend/: build.ts  index.html  openapi-ts.config.ts  openapi.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  NewTicket.tsx  TeamManagement.tsx  TicketDetail.tsx  TicketList.tsx
src/: db.rs  main.rs  resources.rs  types.rs
